--- a/audience.html
+++ b/audience.html
@@ -33,7 +33,7 @@
 const options = [
   "<1.52M", "1.53–1.60M", "1.61–1.73M", "1.74–1.85M", "1.86–1.96M", ">1.96M"
 ];
-const socket = io("http://localhost:5000");
+const socket = io("https://presentation-app-live.onrender.com");
 const user_id = Math.random().toString(36).substring(2, 10); // Random user ID
 
 const container = document.getElementById('buttons');
