--- a/audience.html
+++ b/audience.html
@@ -73,7 +73,7 @@ const questions = [
   }
 ];
 
-let socket = io("https://your-app-name.onrender.com");
+let socket = io("https://presentation-app-live.onrender.com");
 const user_id = Math.random().toString(36).substring(2, 10);
 let currentQuestion = 0;
 
