--- a/audience.html
+++ b/audience.html
@@ -1,112 +1,76 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Live Voting</title>
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      margin-top: 100px;
-    }
-    button {
-      padding: 15px 30px;
-      font-size: 18px;
-      margin: 10px;
-      background: deepskyblue;
-      border: none;
-      color: white;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    h1 {
-      color: #333;
-    }
-  </style>
+    <title>Live Voting</title>
+    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
+    <style>
+        body { font-family: Arial; text-align: center; padding: 50px; background: #fff; }
+        .question { font-size: 24px; margin-bottom: 20px; }
+        .choices button {
+            margin: 10px; padding: 15px 30px;
+            font-size: 18px; cursor: pointer; border: none;
+            background-color: #007BFF; color: white; border-radius: 8px;
+        }
+        .thankyou { font-size: 28px; margin-top: 40px; color: #444; }
+    </style>
 </head>
 <body>
-
-<h1 id="question-text">Loading question...</h1>
-<div id="buttons"></div>
+    <div id="main">
+        <div class="question" id="question">Loading question...</div>
+        <div class="choices" id="choices"></div>
+    </div>
+    <div class="thankyou" id="thankyou" style="display: none;">Thank you for your participation! 🎉</div>
 
 <script>
-const questions = [
-  {
-    question: "How old are you?",
-    options: ['<13', '13–14', '15–16', '17–18', '>18']
-  },
-  {
-    question: "What’s your favorite time to scroll TikTok?",
-    options: ['Before bed', 'Lunch', 'After school', 'During class 😏', 'Never']
-  },
-  {
-    question: "How many hours do you spend on screens daily?",
-    options: ['<2', '2–4', '4–6', '6–8', '8+']
-  },
-  {
-    question: "Your dream weekend looks like...?",
-    options: ['Gaming', 'Netflix', 'Sports', 'Outside', 'Sleeping']
-  },
-  {
-    question: "What social platform do you vibe with most?",
-    options: ['TikTok', 'Snapchat', 'Instagram', 'YouTube', 'Discord']
-  },
-  {
-    question: "Your vibe is more...",
-    options: ['Introvert', 'Extrovert', 'Depends on the day']
-  },
-  {
-    question: "What school subject do you like the most?",
-    options: ['Math', 'Science', 'English', 'Art', 'Gym']
-  },
-  {
-    question: "How do you learn best?",
-    options: ['Visual', 'Hands-on', 'Listening', 'Reading/Writing']
-  },
-  {
-    question: "What music gets you hyped?",
-    options: ['Hip-hop', 'Pop', 'Rock', 'Chill', 'EDM']
-  },
-  {
-    question: "Would you let AI write your homework?",
-    options: ['Absolutely', 'Maybe', 'No way', 'Already did 🤫']
-  }
-];
+    const questions = [
+        { q: "What's your favorite school subject?", options: ["Math", "Science", "English", "History", "Art"] },
+        { q: "What’s your vibe?", options: ["Introvert", "Extrovert", "Depends on the day"] },
+        { q: "Which platform do you use most?", options: ["TikTok", "Snapchat", "Instagram", "YouTube", "Discord"] },
+        { q: "What's your learning style?", options: ["Visual", "Hands-on", "Listening", "Reading/Writing"] },
+        { q: "What do weekends look like?", options: ["Gaming", "Netflix", "Sports", "Outside", "Sleeping"] },
+        { q: "What kind of music do you vibe with?", options: ["Hip-hop", "Pop", "Rock", "Chill", "EDM"] },
+        { q: "How do you feel about group projects?", options: ["Love it", "Hate it", "Meh"] },
+        { q: "Favorite snack during class?", options: ["Chips", "Candy", "Fruit", "Nothing", "Other"] },
+        { q: "Do you think data is fun?", options: ["Yes", "No", "Maybe", "It’s magic!"] },
+        { q: "Would you let AI write your homework?", options: ["Absolutely", "Maybe", "No way", "Already did 🤫"] }
+    ];
 
-let socket = io("https://presentation-app-live.onrender.com");
-const user_id = Math.random().toString(36).substring(2, 10);
-let currentQuestion = 0;
+    const socket = io("https://presentation-app-server.onrender.com"); // Update with actual server URL
+    const questionDiv = document.getElementById("question");
+    const choicesDiv = document.getElementById("choices");
+    const thankyouDiv = document.getElementById("thankyou");
+    const user_id = "user_" + Math.random().toString(36).substring(2, 10);
 
-function renderQuestion(index) {
-  const container = document.getElementById('buttons');
-  const title = document.getElementById('question-text');
-  container.innerHTML = '';
-  const q = questions[index];
-  title.innerText = q.question;
-  q.options.forEach((text, i) => {
-    const btn = document.createElement("button");
-    btn.innerText = text;
-    btn.onclick = () => {
-      socket.emit('submit_vote', {
-        user_id: user_id,
-        choice: i,
-        question: index
-      });
-      [...container.children].forEach(b => b.style.background = 'deepskyblue');
-      btn.style.background = "green";
-    };
-    container.appendChild(btn);
-  });
-}
+    let currentQuestion = -1;
 
-socket.on('connect', () => {
-  renderQuestion(currentQuestion);
-});
+    function renderQuestion(index) {
+        if (index >= questions.length) {
+            document.getElementById("main").style.display = "none";
+            thankyouDiv.style.display = "block";
+            return;
+        }
+        const q = questions[index];
+        questionDiv.innerText = q.q;
+        choicesDiv.innerHTML = '';
+        q.options.forEach((opt, i) => {
+            const btn = document.createElement("button");
+            btn.innerText = opt;
+            btn.onclick = () => {
+                socket.emit("submit_vote", {
+                    user_id: user_id,
+                    question: index,
+                    choice: i
+                });
+            };
+            choicesDiv.appendChild(btn);
+        });
+    }
 
-socket.on('set_question', (index) => {
-  currentQuestion = index;
-  renderQuestion(currentQuestion);
-});
+    socket.on("set_question", (index) => {
+        currentQuestion = index;
+        renderQuestion(index);
+    });
 </script>
 </body>
 </html>
