--- a/presenter.html
+++ b/presenter.html
@@ -36,19 +36,102 @@
 
 <script>
 const questions = [
-    "What's your favorite school subject?",
-    "What’s your vibe?",
-    "Which platform do you use most?",
-    "What's your learning style?",
-    "What do weekends look like?",
-    "What kind of music do you vibe with?",
-    "How do you feel about group projects?",
-    "Favorite snack during class?",
-    "Do you think data is fun?",
-    "Would you let AI write your homework?"
+    {
+        "q": "What's your favorite school subject?",
+        "options": [
+            "Math",
+            "Science",
+            "English",
+            "History",
+            "Art"
+        ]
+    },
+    {
+        "q": "What\u2019s your vibe?",
+        "options": [
+            "Introvert",
+            "Extrovert",
+            "Depends on the day"
+        ]
+    },
+    {
+        "q": "Which platform do you use most?",
+        "options": [
+            "TikTok",
+            "Snapchat",
+            "Instagram",
+            "YouTube",
+            "Discord"
+        ]
+    },
+    {
+        "q": "What's your learning style?",
+        "options": [
+            "Visual",
+            "Hands-on",
+            "Listening",
+            "Reading/Writing"
+        ]
+    },
+    {
+        "q": "What do weekends look like?",
+        "options": [
+            "Gaming",
+            "Netflix",
+            "Sports",
+            "Outside",
+            "Sleeping"
+        ]
+    },
+    {
+        "q": "What kind of music do you vibe with?",
+        "options": [
+            "Hip-hop",
+            "Pop",
+            "Rock",
+            "Chill",
+            "EDM"
+        ]
+    },
+    {
+        "q": "How do you feel about group projects?",
+        "options": [
+            "Love it",
+            "Hate it",
+            "Meh"
+        ]
+    },
+    {
+        "q": "Favorite snack during class?",
+        "options": [
+            "Chips",
+            "Candy",
+            "Fruit",
+            "Nothing",
+            "Other"
+        ]
+    },
+    {
+        "q": "Do you think data is fun?",
+        "options": [
+            "Yes",
+            "No",
+            "Maybe",
+            "It\u2019s magic!"
+        ]
+    },
+    {
+        "q": "Would you let AI write your homework?",
+        "options": [
+            "Absolutely",
+            "Maybe",
+            "No way",
+            "Already did \ud83e\udd2b"
+        ]
+    }
 ];
 
-const socket = io("https://presentation-app-server.onrender.com"); // Replace with actual
+const socket = io("https://presentation-app-server.onrender.com");
 const canvas = document.getElementById("dotCanvas");
 const ctx = canvas.getContext("2d");
 const summaryDiv = document.getElementById("summaryCharts");
@@ -63,11 +146,13 @@ socket.on("connect", () => {
 });
 
 socket.on("update_votes", (votes) => {
-    dots = Object.values(votes).filter(v => v.question === currentQuestion).map((v, i) => ({
-        x: 300 + (v.choice * 120) + Math.random()*50,
-        y: 200 + (i % 10) * 20,
-        r: 10 + Math.random()*4
-    }));
+    dots = Object.values(votes).filter(v => v.question === currentQuestion).map((v, i) => {
+        return {
+            x: 300 + (v.choice * 120) + Math.random()*50,
+            y: 200 + (i % 10) * 20,
+            r: 10 + Math.random()*4
+        };
+    });
 });
 
 function drawDots() {
@@ -92,7 +177,7 @@ nextBtn.onclick = () => {
         summaryDiv.style.display = "block";
         renderSummary();
     } else {
-        questionBox.innerText = questions[currentQuestion];
+        questionBox.innerText = questions[currentQuestion].q;
         socket.emit("set_question", currentQuestion);
     }
 };
@@ -101,61 +186,45 @@ function renderSummary() {
     fetch("survey_result_data.json")
         .then(res => res.json())
         .then(data => {
-            // 1. Learning Style Pie
             new Chart(document.getElementById("chart1"), {
                 type: 'pie',
                 data: {
                     labels: Object.keys(data.learning_type),
-                    datasets: [{
-                        data: Object.values(data.learning_type),
-                        backgroundColor: ['#42a5f5','#66bb6a','#ffa726','#ab47bc']
-                    }]
+                    datasets: [{ data: Object.values(data.learning_type), backgroundColor: ['#42a5f5','#66bb6a','#ffa726','#ab47bc'] }]
                 },
                 options: { plugins: { title: { display: true, text: 'Learning Style Distribution' } } }
             });
-
-            // 2. Emoji Bar
             new Chart(document.getElementById("chart2"), {
                 type: 'bar',
                 data: {
                     labels: Object.keys(data.weekend),
-                    datasets: [{
-                        data: Object.values(data.weekend),
-                        backgroundColor: '#00acc1'
-                    }]
+                    datasets: [{ data: Object.values(data.weekend), backgroundColor: '#00acc1' }]
                 },
                 options: {
-                    plugins: { title: { display: true, text: 'Weekend Vibe (Emoji Style)' }},
+                    plugins: { title: { display: true, text: 'Weekend Vibe (Emoji Style)' } },
                     indexAxis: 'y'
                 }
             });
-
-            // 3. Platform Usage
             new Chart(document.getElementById("chart3"), {
                 type: 'bar',
                 data: {
                     labels: Object.keys(data.platform),
-                    datasets: [{
-                        label: 'Your Group',
-                        data: Object.values(data.platform),
-                        backgroundColor: '#42a5f5'
-                    },{
-                        label: 'National Avg',
-                        data: [0.25,0.2,0.2,0.25,0.1],
-                        backgroundColor: '#9e9e9e'
-                    }]
+                    datasets: [
+                        { label: 'Your Group', data: Object.values(data.platform), backgroundColor: '#42a5f5' },
+                        { label: 'National Avg', data: [0.25,0.2,0.2,0.25,0.1], backgroundColor: '#9e9e9e' }
+                    ]
                 },
                 options: { plugins: { title: { display: true, text: 'Platform Use vs National Avg' } } }
             });
-
-            // 4. AI Attitude by Age
             const ages = Object.keys(data.ai_attitude_by_age["Absolutely"]);
             const attitudes = Object.keys(data.ai_attitude_by_age);
-            const datasets = attitudes.map(att => ({
-                label: att,
-                data: ages.map(age => data.ai_attitude_by_age[att][age] || 0),
-                stack: 'a'
-            }));
+            const datasets = attitudes.map(att => {
+                return {
+                    label: att,
+                    data: ages.map(age => data.ai_attitude_by_age[att][age] || 0),
+                    stack: 'a'
+                };
+            });
             new Chart(document.getElementById("chart4"), {
                 type: 'bar',
                 data: {
@@ -163,7 +232,7 @@ function renderSummary() {
                     datasets: datasets
                 },
                 options: {
-                    plugins: { title: { display: true, text: 'AI Attitude by Age Group' }},
+                    plugins: { title: { display: true, text: 'AI Attitude by Age Group' } },
                     responsive: true
                 }
             });
